<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display2"
        android:layout_width="191dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btnMayor"
        app:layout_constraintTop_toBottomOf="@+id/display1" />

    <TextView
        android:id="@+id/display3"
        android:layout_width="191dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btnMenor"
        app:layout_constraintTop_toBottomOf="@+id/display2" />

    <TextView
        android:id="@+id/display1"
        android:layout_width="191dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="46dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btnPromedio"
        app:layout_constraintTop_toBottomOf="@+id/txt4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <EditText
        android:id="@+id/txt3"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/ingresar_tercera_calificacion"
        android:importantForAutofill="no"
        android:inputType="number"
        android:scrollbarFadeDuration="250"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2" />

    <EditText
        android:id="@+id/txt1"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/ingresar_primera_calificacion"
        android:inputType="number"
        android:textColorHint="#757575"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt4"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/ingresar_cuarta_calificacion"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt3"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt2"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ingresar_segunda_calificacion"
        android:inputType="number"
        android:scrollbarFadeDuration="250"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <Button
        android:id="@+id/btnPromedio"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="43dp"
        android:onClick="Promediate"
        android:text="@string/promedio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt4" />

    <Button
        android:id="@+id/btnMayor"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:onClick="Mayor"
        android:text="@string/mayor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPromedio" />

    <Button
        android:id="@+id/btnMenor"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="29dp"
        android:onClick="Menor"
        android:text="@string/menor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMayor" />

</androidx.constraintlayout.widget.ConstraintLayout>